# Human-Detector-And-Tracker

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  dependencies.sh  download_model_files.sh  run_cppcheck.sh  run_cpplint.sh  run_valgrind.sh
app/: CMakeLists.txt  camera.cpp  detector.cpp  main  main.cpp  obstacle  obstacle.cpp
html/: annotated.html  camera_8h_source.html  classCamera-members.html  classCamera.html  classCamera__inherit__graph.map  classCamera__inherit__graph.md5  classDetector-members.html  classDetector.html  classDetector__coll__graph.map  classDetector__coll__graph.md5  classDetector__inherit__graph.md5  classObstacle-members.html  classObstacle.html  classes.html  detector_8h_source.html  files.html  hierarchy.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.md5  inherits.html  obstacle_8h_source.html
html/search/: searchdata.js
include/: camera.h  detector.h  obstacle.h
latex/: annotated.tex  classCamera.tex  classCamera__inherit__graph.md5  classDetector.tex  classDetector__coll__graph.md5  classDetector__inherit__graph.md5  classObstacle.tex  hierarchy.tex  refman.tex
results/: cppcheck_process.txt  cppcheck_result.txt  cpplint_result.txt  valgrind_results.txt
test/: .gitignore  CMakeLists.txt  detector_test.cpp  main.cpp  newtest.cpp  obstacle_test.cpp  test.py
